# entservices-powermanager

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  PRODUCT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/workflows/: L1-tests.yml  L2-tests-oop.yml  L2-tests.yml  native_full_build.yml
Tests/: README.md
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: test_PowerManager.cpp  test_PowerManagerSettings.cpp  test_PowerManagerThermalController.cpp
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: PowerManager_L2Test.cpp
cmake/: FindTelemetry.cmake
plugin/: AckController.h  CMakeLists.txt  DeepSleepController.cpp  DeepSleepController.h  LambdaJob.h  PowerController.cpp  PowerController.h  PowerManager.conf.in  PowerManager.config  PowerManager.cpp  PowerManager.h  PowerManagerImplementation.cpp  PowerManagerImplementation.h  PowerUtils.cpp  PowerUtils.h  RebootController.cpp  RebootController.h  Settings.cpp  Settings.h  ThermalController.cpp  ThermalController.h
plugin/hal/: DeepSleep.h  DeepSleepImpl.h  Power.h  PowerImpl.h  Thermal.h  ThermalImpl.h  ThermalMfrImpl.h
